[package]
name = "conv2ascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
anyhow = "1.0.55"
image = "0.24.1"
clipboard-win = "4.4.1"
reqwest = { version = "0.11.9", features = ["blocking"] }